SASS Correccion links Page Error404

--- a/views/error404.html
+++ b/views/error404.html
@@ -18,11 +18,11 @@
 <body>
     <section class="mainContainer">
         <article class="main">
-            <img class="item" src="../img/banner1.png" alt="Banner1">
-            <img class="item1" src="../img/img.png" alt="Imagen">
-            <img class="item2" src="../img/banner2.png" alt="Banner2">
-            <img class="item3" src="../img/banner3.png" alt="Banner3">
-            <a href="../html/../index.html" class="return"><span><-</span>Retornar</a>
+            <img class="item" src="../img/banner1.png" alt="Imagen Not found">
+            <img class="item1" src="../img/img.png" alt="Imagen abstracta">
+            <img class="item2" src="../img/banner2.png" alt="Imagen 404">
+            <img class="item3" src="../img/banner3.png" alt="Imagen sentence">
+            <a href="../index.html" class="return"><span><-</span>Retornar</a>
         </article>
     </section>
 
