--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -137,7 +137,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -179,7 +179,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -216,7 +216,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -255,7 +255,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -293,7 +293,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -329,7 +329,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -370,7 +370,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -404,7 +404,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -439,7 +439,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./wrong.html" target="_blank">
+                            <a href="./error404.html" target="_blank">
                                 <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -476,7 +476,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./wrong.html" target="_blank">
+                            <a href="./error404.html" target="_blank">
                                 <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -511,7 +511,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./wrong.html" target="_blank">
+                            <a href="./error404.html" target="_blank">
                                 <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -547,7 +547,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./wrong.html" target="_blank">
+                            <a href="./error404.html" target="_blank">
                                 <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -585,7 +585,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./wrong.html" target="_blank">
+                            <a href="./error404.html" target="_blank">
                                 <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -623,7 +623,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./wrong.html" target="_blank">
+                            <a href="./error404.html" target="_blank">
                                 <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -664,7 +664,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./wrong.html" target="_blank">
+                            <a href="./error404.html" target="_blank">
                                 <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -704,7 +704,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -741,7 +741,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -779,7 +779,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -821,7 +821,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -859,7 +859,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.png" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./wrong.html" target="_blank">
+                                <a href="./error404.html" target="_blank">
                                     <img src="../img/compartir.png" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
